# f1-data-analysis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  files.txt  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.docs/: workflow.excalidraw
.github/workflows/: ingestion_validation.yml  ingestions.yml
.vsocde/: settings.json
aws_connect/: s3_connect.py
config/: .env-example  data_schema.json  settings-example.yaml  settings.yaml
dags/: f1_data_collection.py
data-ingestion/src/: f1_api.py
data_ingestion/: main.py
data_ingestion/src/: f1_api.py  utils.py
data_ingestion/utils/: config_utils.py  func_utils.py  s3_utils.py
data_load_into_bigquery/: main.py
data_prep/: main.py
data_prep/src/: utils.py
data_prep/utils/: utils.py
dbt_projects/: .gitignore  .user.yml  dbt_project.yml
dbt_projects/macros/: convert_time_to_second.sql  schema_generation.sql
dbt_projects/models/marts/: dim_circuits.sql  dim_circuits.yml  dim_constructors.sql  dim_constructors.yml  dim_drivers.sql  dim_drivers.yml  dim_race_status.sql  dim_race_status.yml  dim_schedule.sql  dim_schedule.yml  dim_seasons.sql  dim_seasons.yml  fact_performances.sql  fact_performances.yml  fact_results.sql  (+1 more)
dbt_projects/seeds/: constructor_newgroup.csv  countries.csv  race_status_classification.csv
tests/: test_ingestions.py
tests/ingestion_test_data/: laps.json  pitstops.json  qualifying.json  results.json  sprint.json
utils/: config.py  config_utils.py  ingestion.py  loading.py  prep.py  s3_client.py  s3_connect.py  s3_utils.py
(+21 files in other folders)
